scribble-cli/src/test/resources/good/syntax/disamb/Test01.scr
module good.syntax.disamb.Test01;


sig <java> "foo" from "bar" as M1;


global protocol Foo<sig M>(role A, role B)
{
	() from A to B;
	M from A to B;
	M1 from A to B;
	//M2 from A to B;
}

