scribble-cli/src/test/resources/bad/todo/Modules02.scr
module bad.syntax.disamb.modules.Modules02;


global protocol Foo(role A, role B)
{
	
}

local protocol Foo(role A, role B)  // TODO: local not parsed
{
	
}
